# coach

./: Makefile  Makefile.am  Makefile.in  coach.kdevprj  coach.kdevses  config.h  config.status  configure  configure.in  configure.in.in  libtool  tags
coach/: Formations.C  Formations.h  Makefile  Makefile.am  Makefile.in  MemOption.C  MemOption.h  MemPosition.C  MemPosition.h  MemSetplay.C  MemSetplay.h  Memory.C  Memory.h  archiveIt  client.c  client.h  coach.conf  data.c  data.h  formations.conf  geometry.c  geometry.h  logfile.c  logfile.h  netif.c  netif.h  parse.c  parse.h  serveroptions.h  start_coach.sh  types.h  utils.c  utils.h
