####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = coach

## INCLUDES were found outside kdevelop specific part

coach_SOURCES = utils.C parse.C netif.C MemSetplay.C MemPosition.C Memory.C MemOption.C logfile.C geometry.C Formations.C data.C client.C 
coach_LDADD   = 


EXTRA_DIST = client.C client.h coach.conf data.C data.h Formations.C Formations.h geometry.C geometry.h logfile.C logfile.h MemOption.C MemOption.h Memory.C Memory.h MemPosition.C MemPosition.h MemSetplay.C MemSetplay.h netif.C netif.h parse.C parse.h serveroptions.h types.h utils.C utils.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
coach_LDFLAGS = $(all_libraries) 
                                                                                
